modified .gitignore to exclude some development files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# data files for testing should be ignored until I do this properly
+*.csv
+*.backup
+
+# log files should be ignored
+*.log
+
+# the image of the package structure should be ignored for now
+*.svg
+*.png
+
+### Exclude R files
+
 # History files
 .Rhistory
 .Rapp.history
